# CrewAI-LLMBot

./: README.md  pyproject.toml  report.md
src/samplebot/: crew.py  main.py
