[project]
name = "samplebot"
version = "0.1.0"
description = "samplebot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
samplebot = "samplebot.main:run"
run_crew = "samplebot.main:run"
train = "samplebot.main:train"
replay = "samplebot.main:replay"
test = "samplebot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
